<package>
  <name>wpa_supplicant_node</name>
  <version>1.0.0</version>
  <description>A version of wpa_supplicant that has been modified to work with
     multi_interface_roam.</description>
  <maintainer email="dash@clearpathrobotics.com">Dash</maintainer>

  <license>GPL</license>

  <url type="website">http://ros.org/wiki/wpa_supplicant</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Package maintained by Blaise Gassend</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>actionlib</test_depend> -->
  <!-- <test_depend>actionlib_msgs</test_depend> -->
  <!-- <test_depend>dynamic_reconfigure</test_depend> -->

</package>
